--- a/BloggerWay.Data/BloggerWay.Data.csproj
+++ b/BloggerWay.Data/BloggerWay.Data.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.15">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BloggerWay.Entities\BloggerWay.Entities.csproj" />
     <ProjectReference Include="..\BloggerWay.Shared\BloggerWay.Shared.csproj" />
   </ItemGroup>
