--- a/BloggerWay.Data/BloggerWay.Data.csproj
+++ b/BloggerWay.Data/BloggerWay.Data.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BloggerWay.Entities\BloggerWay.Entities.csproj" />
+    <ProjectReference Include="..\BloggerWay.Shared\BloggerWay.Shared.csproj" />
+  </ItemGroup>
 
 </Project>
