--- a/BloggerWay.Services/BloggerWay.Services.csproj
+++ b/BloggerWay.Services/BloggerWay.Services.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BloggerWay.Data\BloggerWay.Data.csproj" />
     <ProjectReference Include="..\BloggerWay.Entities\BloggerWay.Entities.csproj" />
     <ProjectReference Include="..\BloggerWay.Shared\BloggerWay.Shared.csproj" />
   </ItemGroup>
