--- a/BloggerWay.Services/BloggerWay.Services.csproj
+++ b/BloggerWay.Services/BloggerWay.Services.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BloggerWay.Entities\BloggerWay.Entities.csproj" />
+    <ProjectReference Include="..\BloggerWay.Shared\BloggerWay.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
