AutoMapper Eklendi ve entegre edildi.

--- a/BloggerWay.Services/BloggerWay.Services.csproj
+++ b/BloggerWay.Services/BloggerWay.Services.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BloggerWay.Data\BloggerWay.Data.csproj" />
     <ProjectReference Include="..\BloggerWay.Entities\BloggerWay.Entities.csproj" />
     <ProjectReference Include="..\BloggerWay.Shared\BloggerWay.Shared.csproj" />
