--- a/BloggerWay.Entities/BloggerWay.Entities.csproj
+++ b/BloggerWay.Entities/BloggerWay.Entities.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.15" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BloggerWay.Shared\BloggerWay.Shared.csproj" />
   </ItemGroup>
 
