ConnectionString  AppSettings.json a taşındı.

--- a/BloggerWay.MVC/appsettings.Development.json
+++ b/BloggerWay.MVC/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LocalDB": "Server=127.0.0.1;Port=5432;Database=BloggerWay;User Id=postgres;Password=123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
