ICategory Service ve CategoryManager  üzerine XML Yorum Satırları eklendi.

--- a/BloggerWay.Services/BloggerWay.Services.csproj
+++ b/BloggerWay.Services/BloggerWay.Services.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>C:\Users\IBRAHIM\source\repos\BloggerWay\BloggerWay.Services\obj\Debug\net5.0\BloggerWay.Services.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702,CS1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702,CS1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
