_RoleAssignPartial (Rol Atama) sayfası oluşturuldu ve Role Atama İşlemleri Tamamlandı.

--- a/BloggerWay.MVC/BloggerWay.MVC.csproj
+++ b/BloggerWay.MVC/BloggerWay.MVC.csproj
@@ -31,4 +31,11 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Areas\Admin\Views\Role\_RoleAssignPartial.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
