WebsiteInfo Sınıfı Oluşturuldu ve _Layout Sayfası Üzerine Uygulandı.

--- a/BloggerWay.MVC/appsettings.json
+++ b/BloggerWay.MVC/appsettings.json
@@ -13,5 +13,12 @@
     "SeoDescription": "BloggerWay Hakkında İçeriği, Sayfası ve Açıklaması",
     "SeoTags": "BloggerWay, C#, C++, Web, Programlama, Coding, About us, hakkında, hakkımızda",
     "SeoAuthor": "BloggerWay"
+  },
+  "WebsiteInfo": {
+    "Title": "BloggerWay",
+    "MenuTitle": "BloggerWay",
+    "SeoDescription": "Programcılar ve Yazılımcılar için Türkçe Rehber Blog",
+    "SeoTags": "Coding, Yazılım, Web, Mobil, Masaüstü, Desktop",
+    "SeoAuthor": "BloggerWay"
   }
 }
