SmtpSettings Sınıfı Oluşturuldu ve Appsettings.json Üzerine Eklendi.

--- a/BloggerWay.MVC/appsettings.json
+++ b/BloggerWay.MVC/appsettings.json
@@ -20,5 +20,13 @@
     "SeoDescription": "Programcılar ve Yazılımcılar için Türkçe Rehber Blog",
     "SeoTags": "Coding, Yazılım, Web, Mobil, Masaüstü, Desktop",
     "SeoAuthor": "BloggerWay"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.office365.com",
+    "Port": "587",
+    "SenderName": "BloggerWay",
+    "SenderEmail": "aliveli4950.39@outlook.com",
+    "Username": "aliveli4950.39@outlook.com",
+    "Password": "aliveli4950"
   }
 }
