ArticleRightSideBarWidgetOptions sınıfı yazıldı.

--- a/BloggerWay.MVC/appsettings.json
+++ b/BloggerWay.MVC/appsettings.json
@@ -28,5 +28,19 @@
     "SenderEmail": "aliveli4950.39@outlook.com",
     "Username": "aliveli4950.39@outlook.com",
     "Password": "aliveli4950"
+  },
+  "ArticleRightSideBarWidgetOptions": {
+    "Header": "Kategoriler",
+    "TakeSize": 8,
+    "CategoryId": 1,
+    "FilterBy": 2,
+    "OrderBy": 1,
+    "IsAscending": false,
+    "StartAt": "2022-05-05T00:00:00",
+    "EndAt": "2023-05-09T00:00:00",
+    "MaxViewCount": 10000,
+    "MinViewCount": 0,
+    "MaxCommentCount": 10000,
+    "MinCommentCount": 0
   }
 }
