--- a/BloggerWay.MVC/appsettings.json
+++ b/BloggerWay.MVC/appsettings.json
@@ -16,7 +16,7 @@
   },
   "WebsiteInfo": {
     "Title": "BloggerWay ",
-    "MenuTitle": "BloggerWay ",
+    "MenuTitle": "BloggerWay 2",
     "SeoDescription": "Programcılar ve Yazılımcılar için Türkçe Rehber Blog",
     "SeoTags": "Coding, Yazılım, Web, Mobil, Masaüstü, Desktop",
     "SeoAuthor": "BloggerWay"
