--- a/BloggerWay.MVC/nlog.config
+++ b/BloggerWay.MVC/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="C:\Users\IBRAHIM\source\repos\BloggerWay\BloggerWay.MVC\logs\internal-nlog-AspNetCore.txt">
+      internalLogFile="logs\internal-nlog-AspNetCore.txt">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
