--- a/BloggerWay.MVC/appsettings.json
+++ b/BloggerWay.MVC/appsettings.json
@@ -16,7 +16,7 @@
   },
   "WebsiteInfo": {
     "Title": "BloggerWay ",
-    "MenuTitle": "BloggerWay 2",
+    "MenuTitle": "BloggerWay ",
     "SeoDescription": "Programcılar ve Yazılımcılar için Türkçe Rehber Blog",
     "SeoTags": "Coding, Yazılım, Web, Mobil, Masaüstü, Desktop",
     "SeoAuthor": "BloggerWay"
@@ -30,7 +30,7 @@
     "Password": "aliveli4950"
   },
   "ArticleRightSideBarWidgetOptions": {
-    "Header": "Kategoriler",
+    "Header": "Önerilen Makaleler",
     "TakeSize": 8,
     "CategoryId": 1,
     "FilterBy": 2,
