--- a/BloggerWay.Entities/BloggerWay.Entities.csproj
+++ b/BloggerWay.Entities/BloggerWay.Entities.csproj
@@ -11,6 +11,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.15" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.15" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
