--- a/BloggerWay.Entities/BloggerWay.Entities.csproj
+++ b/BloggerWay.Entities/BloggerWay.Entities.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.15" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.15" />
   </ItemGroup>
